--- a/app/index.html
+++ b/app/index.html
@@ -94,6 +94,7 @@
     <script src="bower_components/angular-ui-utils/ui-utils.js"></script>
     <script src="bower_components/respondJs/dest/respond.src.js"></script>
     <!-- endbower -->
+    <script src="bower_components/angular-grid/plugins/ng-grid-flexible-height.js"></script>
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
@@ -106,6 +107,7 @@
         <script src="scripts/controllers/productsinf.js"></script>
         <script src="scripts/controllers/productsgrid.js"></script>
         <script src="scripts/services/product.js"></script>
+        <script src="scripts/controllers/test.js"></script>
         <!-- endbuild -->
 </body>
 </html>
