--- a/app/index.html
+++ b/app/index.html
@@ -50,9 +50,9 @@
           <div data-ui-view="leftView"></div>            
        </div>
     </div>
-    <div id="main-wrapper" class="col-md-11 pull-right">
-      <div id="main">
-        <div data-ui-view="mainView"></div>
+    <div id="main-wrapper" class="col-md-11 pull-right" style=" height:100% !important; padding:0px; margin:0px;">
+      <div id="main" style="padding:0px; margin:0px;">
+        <div data-ui-view="mainView" style=" height:100% !important; padding:0px; margin:0px;"></div>
       </div>
     </div>
   </div>
